Fix new permission tests